test/visibility/private/moduleSymbols/accessPrivateUsedSibling2a.good
accessPrivateUsedSibling2a.chpl:18: In function 'main':
accessPrivateUsedSibling2a.chpl:20: error: 'secretVariable' undeclared (first use this function)
